--- a/locales/he.json
+++ b/locales/he.json
@@ -4,6 +4,95 @@
   },
   "products": {
     "loadMore": "טען עוד"
+  },
+  "header": {
+    "myStory": "הסיפור שלי",
+    "shop": "התחדשי",
+    "giftCard": "שובר מתנה",
+    "personalStylist": "עיצוב מראה אישי",
+    "account": "החשבון שלי",
+    "wishlist": "שומרת לי בפינה",
+    "cart": "עגלת קניות",
+    "close": "סגור"
+  },
+  "cart": {
+    "cart": "עגלת קניות",
+    "yourCart": "העגלה שלך",
+    "yourCartIsEmpty": "העגלה שלך ריקה",
+    "subtotal": "סיכום ביניים:",
+    "proceedToCheckout": "המשך לתשלום",
+    "remove": "הסרה",
+    "size": "מידה:",
+    "color": "צבע",
+    "amount": "כמות:",
+    "giftCard": "שובר מתנה",
+    "personalStylist": "עיצוב מראה אישי",
+    "address": "כתובת:",
+    "name": "שם:",
+    "online": "אונליין",
+    "inPerson": "פגישה אישית"
+  },
+  "footer": {
+    "signUpForUpdates": "הירשמו לעדכונים",
+    "enterEmail": "הזן אימייל",
+    "send": "שליחה",
+    "contact": "צור קשר",
+    "termsOfUse": "תנאי שימוש",
+    "privacyPolicy": "מדיניות פרטיות",
+    "shippingAndReturns": "משלוחים והחזרות",
+    "paymentAndDelivery": "תשלום ומשלוח"
+  },
+  "newsletter": {
+    "signUpForUpdates": "הירשמו לעדכונים",
+    "enterEmail": "הזן אימייל",
+    "send": "שליחה",
+    "subscribeSuccess": "נרשמת בהצלחה לעדכונים",
+    "subscribeError": "הרשמה נכשלה"
+  },
+  "myStory": {
+    "title": "הסיפור שלי",
+    "home": "בית",
+    "content": "נעים להכיר. אני רוטמינה — כינוי הילדות שלי שנשאר איתי. \n\nאני מעצבת אופנה וסטייליסטית אישית. \nאחרי שנים רבות, בחרתי לצלול אל תוך האני האמיתי שלי — הטבע האותנטי שלי — להיפתח אל הדרך הפנימית שלי ולחזור הביתה אל מהות הליבה שלי. \n\nהדרך שאני הולכת בה שזורה בעולמות רבים: רגש וביטוי יצירתי, חיבור עמוק לטבע ולאמנות. לפני עשור, בחרתי בצמחונות כדרך חיים. המעבר הרגיש טבעי ומחובר עמוקות. דרך המסע האישי שלי, בחרתי לראות את מה — ואת מי — שלעתים קרובות נשאר בלתי נראה. \n\nכשאני נושאת את התובנות האלה קדימה, התנועה שלי בעולם שואפת לגלם נוכחות כנה ומחויבות עמוקה לקיימות בכל שכבותיה. אני שואפת לשקיפות ומאמצת את המורכבות והרב-ממדיות של הקיום שלנו. \n\n\nיוצא מהמרחב הזה, רוטמינה היא יותר ממותג אופנה — היא שפה, תהודה אנרגטית, דרך תודעה מעוצבת על ידי אחדות, ותשוקה בוערת תמיד לעומק ואסתטיקה. \n\nאני מעודדת אותך לאמץ את עצמך בביטחון — לבחור בשלמות שמקרינה גם פנימה וגם החוצה — ולהצטרף אליי למסע הזה."
+  },
+  "giftCard": {
+    "title": "כרטיס מתנה",
+    "home": "בית",
+    "giftCardBreadcrumb": "כרטיס מתנה",
+    "description": "לא בטוחים מה לבחור?\nכרטיס מתנה הוא תמיד רעיון נהדר!\nתנו ליקיריכם לבחור את מה שהם אוהבים.",
+    "recipientsName": "שם המקבלת",
+    "recipientsEmail": "מייל המקבלת",
+    "yourName": "שם השולח/ת",
+    "yourEmail": "מייל השולח/ת",
+    "personalMessage": "ברכה אישית",
+    "amount": "סכום",
+    "addToCart": "הוסף לעגלה",
+    "validation": {
+      "recipientsNameRequired": "שם המקבלת נדרש",
+      "recipientsEmailRequired": "כתובת אימייל לא תקינה",
+      "yourNameRequired": "שם השולח/ת נדרש",
+      "yourEmailRequired": "כתובת אימייל לא תקינה",
+      "amountRequired": "סכום נדרש"
+    }
+  },
+  "personalStylist": {
+    "title": "עיצוב מראה אישי",
+    "home": "בית",
+    "personalStylistBreadcrumb": "עיצוב מראה אישי",
+    "price": "מחיר",
+    "content": "תהליך עיצוב מראה אישי ובניית מלתחה אישית מותאמת לסגנון החיים שלך, לערכים ולצרכים האישיים שלך, התהליך שלי הוא הזמנה להקשיב לעצמך- לנוכחות שלך, למה שנעים ונכון לך בדגש על מה שגורם לך להרגיש טוב ובנוח עם המראה שלך. \n\nיחד נבנה מלתחה מגובשת המותאמת אלייך, לאורח החיים שלך, למבנה הגוף שלך ולמה שבאמת משרת אותך ביומיום, ללא טרנדים שמדברים בשפה זרה וללא ניסיון להתאים את עצמך למה שמרחיק אותך ממי שאת באמת. \n\nהתהליך הוא הזדמנות להתחבר לעצמך דרך הבחירות הויזואליות שלך, אני מאמינה שמראה אישי הוא דרך לביטוי עצמי, לשיקוף תנועה פנימית ולהעמקת החיבור שלנו עם עצמנו. \n\nאני מביאה איתי השקפת עולם המדברת על קיימות, על איכות על פני כמות ועל צרכנות נבונה המתחשבת בסביבה, המטרה שלי אינה ליצור \"לוק\" אלא לבנות יחד מראה שירגיש לך שלם נינוח ומותאם למי שאת היום. \n\nבמהלך הפגישה נבנה יחד נראות שתהווה הלבשה חיצונית למהות הפנימית שלך, תקבלי כלים מיטביים והבנה מה נכון עבורך ליצירת נראות אותנטית שתשרת אותך גם בהמשך הדרך. \n\nמתוך המרחב הזה כשאת בוחרת פרטי לבוש מתוך חיבור למהות שלך, הם כבר לא רק פריטי לבוש -הם הופכים לקרקע יציבה ותומכת המאפשרת לך להיות פשוט את,בלי להתאמץ.",
+    "meetingOverview": "מה נעשה בפגישה",
+    "meetingOverviewContent": "בשלב הראשון: נתרכז ביש, נלמד יחד את דרך הביטוי והבחירות שלך עד כה,נבחן ונמדוד פריטים מועדפים מארון הבגדים האישי שלך תוך לימוד כלים חדשים לבחירות מדוייקות עבורך על פי יתרונות מבנה גופך, נמיין פריטים שאינם רלוונטיים נוציאם מהארון ונשאיר רק את מה שרלוונטי ונכון עבורך. \n\nבשלב השני: נלמד על סוגי בדים, צבעים מחמיאים לפי גוון עורך, גזרות חיתוכי בגדים שעושים פלאים ועל שילובים מוצלחים יחד מתוך המלתחה הקיימת, נרד לרזולציות קטנות יותר, מהלבשה תחתונה מותאמת עד לגובה מכפלת נכון למידותייך ונדייק מה נדרש להוסיף למלתחה על מנת להשלים אותה לצרכייך. \n\nבסיום התהליך: אנחנו מגדירות את ההווה, מה מתאים למתי איך מחזיקים בגד, מהן הגזרות המתאימות לך על פי מבנה גופך ומהן הבחירות הנכונות עבורך בהתאם למה שתבחרי להנכיח ולשדר. \n\nאת יוצאת עם כלים מעצימים פרקטיים ויישומיים שתוכלי להמשיך ליישם בעצמך בעתיד, כלים שיעניקו לך מראה שמספר את הסיפור שלך באופן הנאמן והבהיר ביותר.",
+    "virtualMeeting": "פגישת וידאו",
+    "virtualMeetingContent": "פגישה ממוקדת מעשירה ועתירת ידע היא דרך נוספת לדייק אותך-אם יש לך פגישה, אירוע חשוב, ראיון עבודה, פרזנטציה משמעותית או צורך מידי להתחדש ולהרגיש מדויקת ונוכחת. בפגישה נצלול יחד למטרה שלך מתוך מרחב נינוח, נבין את הקונטקסט והמסר שתרצי לשדר ויחד נבנה עבורך מראה חכם נכון ונאמן למי שאת. \n\nבסיום הפגישה ניצור מערכת לבוש מותאמת אישית לאירוע שתכלול את כלל האלמנטים הנדרשים. פרטי לבוש, נעליים ואקססוריז באופן שיתמוך בנוכחותך ובמהות שתבחרי לשדר. \n\nבלב המטרה שלי עומד הרצון להוביל אותך להרגיש שלמה, בטוחה ומובילה-בכל מקום שתבחרי להיות בו.",
+    "online": "אונליין בביתך",
+    "atYourHome": "בביתך",
+    "duration": "משך זמן:",
+    "priceLabel": "מחיר:",
+    "onlineUnavailable": "פגישות אונליין זמינות זמנית",
+    "atYourHomeUnavailable": "פגישות בביתך זמינות זמנית",
+    "addToCart": "הוספה לסל",
+    "loading": "טוען...",
+    "priceNote": "המחיר מתחשב באורך הפגישה ומציע תעריף נוח יותר לפגישות ארוכות מ- 5 שעות ומעלה."
   }
 }
 
