added all pages translates

--- a/locales/he.json
+++ b/locales/he.json
@@ -93,6 +93,332 @@
     "addToCart": "הוספה לסל",
     "loading": "טוען...",
     "priceNote": "המחיר מתחשב באורך הפגישה ומציע תעריף נוח יותר לפגישות ארוכות מ- 5 שעות ומעלה."
+  },
+  "shop": {
+    "home": "בית",
+    "shopBreadcrumb": "התחדשי",
+    "sortBy": "מיין לפי:",
+    "filter": "סינון",
+    "loadingFilters": "טוען מסננים...",
+    "loadingProducts": "טוען מוצרים...",
+    "loadingPagination": "טוען דפדוף..."
+  },
+  "filter": {
+    "color": "צבע",
+    "size": "מידה",
+    "apply": "החל",
+    "loading": "טוען..."
+  },
+  "sort": {
+    "popularity": "פופולריות",
+    "priceUp": "לפי מחיר עולה",
+    "priceDown": "לפי מחיר יורד",
+    "sale": "מבצע חם"
+  },
+  "home": {
+    "separation": {
+      "title": "נפרדות",
+      "content": "יש רגע שבו העצמי מבקש הבדל-,\nמרחק בריא, בין אני ואת, אני ואתה, בין העצמי והעולם\nלא כדי לברוח, אלא כדי להתחיל להיות.\n\nהקולקציה הזו נולדה מתוך תהליך פנימי עמוק,\nמסע של נפרדות.\n\nנפרדות או ספרציה, הוא מושג מעולם הפסיכולוגיה ההתפתחותית,\nזהו שלב ראשוני, שבו הילד מתחיל להבין שהוא נפרד מהאם,\nשיש לו רצונות, רגשות ותחושות משלו - שהוא אינו המשך ישיר שלה.\n\nזהו תהליך בריא, עדין ולעיתים מטלטל - בין חיבור לניתוק, בין ביטחון לתלות, בין קרבה לריחוק,\nבין חיפוש אחר עצמאות לצד כמיהה לאחדות.\n\nאת המסע הזה תרגמתי לבדים, לצורות, לקווים,\nפריטים שמבטאים את התנועה הזו - סגירות מול פתיחות, רכות מול נוקשות,\nמבנים שמחזיקים את הגוף אך מבקשים חופש,\nכמו הנפש – שמבקשת גבול, אך לא סגור.\n\nהקולקציה הזו היא סיפור של נפרדות מחוברת.\nקול פנימי שמבקש להיות."
+    },
+    "ethics": {
+      "title": "רותמינה - בין יופי לאתיקה",
+      "content": "רותמינה נוסדה מתוך תשוקה ומחויבות עמוקה להגינות\nכלפי בעל החיים, הטבע ובני האדם -שיקוף מתוך הדרך בה\nאני בוחרת להתקיים בעולם.\n\nהבחירות שלי אינן רק אופנתיות, הן מוסריות,\nהן בחירות המכבדות חיים, נוגעות באדמה ונובעות מאהבה.\n\nכל פריט נוצר ממודעות נוכחת, ללא שימוש בחומרים מן מהחי,\nמתוך חשיבה, כבוד ותשומת לב למה שמחבר בין\nיופי חמלה וקיימות.\n\nעבורי יופי אמיתי אינו פוגע ואינו נעשה על חשבון\nהחיים, כך נולדת יצירה שמלטפת את הגוף מבלי\nלפגוע בנשמה.",
+      "crueltyFree": "Cruelty free",
+      "vegan": "Vegan"
+    },
+    "categories": "קטגוריות",
+    "collections": "קולקציות"
+  },
+  "collections": {
+    "noDescription": "אין תיאור",
+    "seeCollection": "צפה בקולקציה"
+  },
+  "login": {
+    "title": "התחברי",
+    "email": "מייל",
+    "password": "סיסמה",
+    "forgotPassword": "שכחתי סיסמה",
+    "noAccount": "עוד לא הצטרפת למסע?",
+    "signUp": "מחכה לך",
+    "logIn": "התחברי",
+    "incorrectCredentials": "סיסמה או מייל שגויים"
+  },
+  "signup": {
+    "title": "הירשמי",
+    "name": "שם",
+    "surname": "שם משפחה",
+    "email": "מייל",
+    "password": "סיסמה",
+    "hasAccount": "כבר יש לך חשבון?",
+    "logIn": "התחברי",
+    "signUp": "הירשמי"
+  },
+  "resetPassword": {
+    "title": "איפוס סיסמה",
+    "description": "הזיני את המייל שלך ותקבלי קישור לחידוש סיסמתך",
+    "email": "מייל",
+    "sendEmail": "שלחי מייל"
+  },
+  "newPassword": {
+    "title": "איפוס סיסמה",
+    "description": "הזיני את הסיסמה החדשה שלך",
+    "newPassword": "סיסמה חדשה",
+    "confirmPassword": "אישור סיסמה",
+    "reset": "איפוס",
+    "incorrect": "שגוי"
+  },
+  "orderConfirm": {
+    "title": "הזמנה אושרה!",
+    "yourOrder": "ההזמנה שלך מס'",
+    "thankYou": "תודה שבחרת ברוטמינה. מייל אישור בדרך אלייך, ההזמנה שלך נארזת בקפידה ותישלח בקרוב.",
+    "exploreMore": "גלי עוד",
+    "payForOrder": "שלם עבור ההזמנה"
+  },
+  "cartPage": {
+    "home": "בית",
+    "cartBreadcrumb": "העגלה שלך",
+    "shippingInformation": "פרטי משלוח",
+    "paymentMethods": "אמצעי תשלום",
+    "yourCart": "העגלה שלך",
+    "subtotal": "סך ביניים",
+    "yourCartIsEmpty": "העגלה שלך ריקה",
+    "pleaseAddAddress": "אנא הוסיפי כתובת למשלוח",
+    "cartIsEmpty": "העגלה ריקה",
+    "errorCreatingOrder": "אירעה שגיאה ביצירת ההזמנה. אנא נסי שוב."
+  },
+  "orderForm": {
+    "name": "שם",
+    "surname": "שם משפחה",
+    "email": "אימייל",
+    "phone": "טלפון",
+    "next": "הבא"
+  },
+  "addressForm": {
+    "loading": "טוען...",
+    "error": "שגיאה:",
+    "addressAddedSuccess": "הכתובת נוספה בהצלחה",
+    "addressDeletedSuccess": "הכתובת נמחקה בהצלחה",
+    "address": "כתובת למשלוח (עיר, רחוב, מספר בניין, דירה)",
+    "city": "עיר",
+    "zipCode": "מיקוד",
+    "adding": "מוסיף...",
+    "addNewAddress": "הוסף כתובת חדשה"
+  },
+  "payment": {
+    "home": "בית",
+    "cartBreadcrumb": "העגלה שלך",
+    "shippingInformation": "פרטי משלוח",
+    "paymentMethods": "אמצעי תשלום",
+    "card": "כרטיס",
+    "cash": "מזומן",
+    "nameOnCard": "שם על הכרטיס",
+    "cardNumber": "מספר כרטיס",
+    "telephone": "טלפון",
+    "expDate": "תאריך תפוגה",
+    "cvv": "CVV",
+    "iHaveReadAndAgree": "אני קראתי ומסכים/ה עם",
+    "pay": "שלם",
+    "promoCode": "קוד קופון",
+    "apply": "החל",
+    "giftCard": "כרטיס מתנה",
+    "searching": "מחפש...",
+    "giftCardAlreadyUsed": "כרטיס המתנה הזה כבר שימש",
+    "giftCardExists": "המתנה קיימת ולא שימשה, תוכלי להחיל אותה",
+    "giftCardNotFound": "כרטיס מתנה לא נמצא",
+    "subtotal": "סיכום ביניים",
+    "delivery": "משלוח",
+    "free": "חינם",
+    "vat": "מע\"מ",
+    "default": "ברירת מחדל",
+    "total": "סך הכול",
+    "paymentSuccessful": "התשלום בוצע בהצלחה",
+    "giftCardAppliedSuccess": "כרטיס המתנה הוחל בהצלחה",
+    "wrongCardNumber": "מספר כרטיס שגוי",
+    "wrongExpirationDate": "תאריך תפוגה שגוי",
+    "wrongCvv": "CVV שגוי",
+    "expiredCard": "כרטיס פג תוקף",
+    "giftCardFor": "כרטיס מתנה עבור",
+    "personalStylist": "עיצוב מראה אישי",
+    "minutes": "דקות",
+    "product": "מוצר",
+    "unknownProduct": "מוצר לא ידוע"
+  },
+  "terms": {
+    "termsOfAgreement": "תנאי ההסכם.",
+    "title": "תנאי שימוש באתר",
+    "section1": {
+      "title": "1. כללי",
+      "1.1": "1.1. תקנון זה מהווה הסכם משפטי מחייב בין המשתמשים באתר לבין הנהלת האתר (להלן: \"האתר\").",
+      "1.2": "1.2. כל כניסה לאתר, גלישה, רישום, ביצוע רכישה או כל שימוש אחר באתר מהווים הסכמה מלאה לתנאי התקנון.",
+      "1.3": "1.3. הנהלת האתר רשאית לעדכן את התקנון מעת לעת, לפי שיקול דעתה הבלעדי וללא צורך בהודעה מוקדמת.",
+      "1.4": "1.4. בכל מקרה של סתירה בין תקנון זה לבין כל פרסום אחר, יגברו תנאי התקנון."
+    },
+    "section2": {
+      "title": "2. תנאי שימוש וגישה לאתר",
+      "2.1": "2.1. השימוש באתר מותר למי שמלאו לו 18 שנים. קטינים מתחת לגיל 18 רשאים לבצע רכישות רק באישור הורה או אפוטרופוס.",
+      "2.2": "2.2. האתר מיועד לשימוש אישי בלבד, ואין לעשות בו שימוש מסחרי ללא אישור מראש ובכתב מהנהלת האתר.",
+      "2.3": "2.3. חל איסור מוחלט לבצע באתר כל פעולה בלתי חוקית, להפר זכויות יוצרים או לפגוע בכל דרך אחרת בהנהלת האתר, במשתמשים אחרים או בצדדים שלישיים.",
+      "2.4": "2.4. הנהלת האתר שומרת לעצמה את הזכות למנוע גישה למשתמשים אשר מפרים את תנאי השימוש, ללא צורך במתן הודעה מוקדמת."
+    },
+    "section3": {
+      "title": "3. סוגי התכנים והשימוש בחנות הדיגיטלית",
+      "3.1": "3.1. האתר כולל תכנים מקוריים, מידע על מוצרים, פרסומים ועדכונים.",
+      "3.2": "3.2. אין להעתיק, לשכפל, להפיץ, לפרסם או להשתמש בכל דרך אחרת בתכנים מהאתר ללא אישור מראש ובכתב מהנהלת האתר."
+    },
+    "section4": {
+      "title": "4. הזמנת מוצרים ושירותים דרך האתר",
+      "4.1": "4.1. כל הרכישות באתר כפופות לזמינות המלאי. במקרה של חוסר במלאי, הלקוח יקבל הודעה ויוכל לבחור להמתין או לבטל את ההזמנה.",
+      "4.2": "4.2. הזמנה תאושר רק לאחר פרעון התשלום במלואו באמצעות כרטיס אשראי Apple pay, Googel pay, ביט ובכפוף לאישור חברת הסליקה.",
+      "4.3": "4.3. מחירי המוצרים כוללים מע\"מ, אלא אם צוין אחרת במפורש."
+    },
+    "section5": {
+      "title": "5. משלוח ואיסוף עצמי בישראל",
+      "5.1": "5.1. המוצרים יסופקו לכתובת הלקוח בהתאם לבחירתו בעת הרכישה.",
+      "5.2": "5.2. מועד אספקת המשלוח מוערך בכ- 7 ימי עסקים בהתאם ליעד שנבחר.",
+      "5.3": "5.3 ימי עסקים הינם ימי א' עד ה', לא כולל ימי שישי,שבת,שבתון,ערבי חג וימי חג.",
+      "5.4": "5.4. אפשרות לאיסוף עצמי תינתן בתיאום טלפוני ללא עלות."
+    },
+    "section6": {
+      "title": "6. הוראות כלליות בעניין משלוחים ואספקת מוצרים",
+      "6.1": "6.1 אספקת הפריטים שנרכשו מתבצעת באמצעות חברת משלוחים חיצונית, במקרים בהם לא ניתן לקבל את שירות חברת המשלוחים ליישוב מסוים, ניתן לתאם מקום מתאים ונוח חלופי.",
+      "6.2": "6.2. הנהלת האתר אינה אחראית על עיכובים הנובעים מגורמים חיצוניים כגון חברת השליחויות מצב חירום ביטחוני שביתות או כוח עליון.",
+      "6.3": "6.3. על הלקוח לוודא כי הפרטים שמסר למשלוח נכונים ומדויקים."
+    },
+    "section7": {
+      "title": "7. מדיניות ביטול והחזרת מוצרים",
+      "7.1": "7.1. הלקוח רשאי להחזיר פריט תוך 14 ימים מקבלת המוצר, על פי חוק הגנת הצרכן לאחר מילוי טופס החזרות, בתנאי שלא נעשה בו שימוש, המוצר אינו פגום והוא נושא את התווית המקורית.",
+      "7.2": "7.2. ניתן לקבל זיכוי לחנות או החזר כספי אשר יבוצע באותו אמצעי תשלום בו בוצעה הרכישה עד 12 ימי עסקים מיום קבלת הפריט. החזר כספי לכרטיס אשראי יופיע בפירוט האשראי תוך 21 ימי עסקים.",
+      "7.3": "7.3. במידה ותבחרי להחזיר פריט דרך שליח, דמי המשלוח יקוזזו מעלות הפריט - בעלות דמי משלוח של 30 ₪, אשר יקוזזו מסכום הזיכוי. תיאום המשלוח יתבצע דרכנו."
+    },
+    "section8": {
+      "title": "8. קישורים, פרסומות והפניות מהאתר",
+      "8.1": "8.1. האתר עשוי לכלול קישורים לאתרים חיצוניים. הנהלת האתר אינה אחראית לתוכן או להתנהלות של אתרים אלו.",
+      "8.2": "8.2. כל עסקה שתתבצע מול צד שלישי דרך קישור מהאתר היא באחריות הלקוח בלבד."
+    },
+    "section9": {
+      "title": "9. זכויות בעלות וזכויות קניין רוחני",
+      "9.1": "9.1. כל הזכויות על התכנים, התמונות, העיצובים, הלוגואים, הטקסטים וכל רכיב אחר באתר הם רכושו הבלעדי של בעל האתר ומוגנים על פי חוקי הקניין הרוחני.",
+      "9.2": "9.2. אין להעתיק, לשכפל, להפיץ, לפרסם, למכור או להשתמש בכל דרך אחרת בתכני האתר ללא אישור מראש ובכתב מהנהלת האתר."
+    },
+    "section10": {
+      "title": "10. שימוש בתכני האתר",
+      "10.1": "10.1. אין להעלות לאתר תכנים פוגעניים, בלתי חוקיים או שעלולים לפגוע בזכויות צדדים שלישיים.",
+      "10.2": "10.2. הנהלת האתר רשאית להסיר כל תוכן שיימצא לא ראוי או מפר את תנאי השימוש."
+    },
+    "section11": {
+      "title": "11. פטור מאחריות ושיפוי",
+      "11.1": "11.1. הנהלת האתר אינה אחראית לכל נזק ישיר או עקיף שייגרם כתוצאה משימוש באתר, מתקלות טכניות או משימוש לא תקין.",
+      "11.2": "11.2. האתר מספק מידע \"כפי שהוא\" (As-Is), ואין לראות בו הבטחה לתוצאה מסוימת, המלצה או ייעוץ מקצועי.",
+      "11.3": "11.3. המשתמש מתחייב לשפות את הנהלת האתר בגין כל טענה, תביעה או נזק שייגרם עקב הפרת תנאי השימוש על ידו."
+    },
+    "section12": {
+      "title": "12. סמכות שיפוט",
+      "12.1": "12.1. על התקנון ותנאי השימוש יחולו אך ורק דיני מדינת ישראל.",
+      "12.2": "12.2. כל מחלוקת שתתגלע בין הצדדים תידון בבתי המשפט המוסמכים במחוז שבו רשומה הנהלת האתר."
+    },
+    "section13": {
+      "title": "13. שינויים בתנאי השימוש",
+      "13.1": "13.1. הנהלת האתר רשאית לעדכן את תנאי השימוש מעת לעת לפי שיקול דעתה הבלעדי.",
+      "13.2": "13.2. שימוש מתמשך באתר לאחר עדכון התקנון יהווה הסכמה לתנאים החדשים."
+    },
+    "section14": {
+      "title": "14. יצירת קשר",
+      "14.1": "14.1. נשמח לעמוד לרשותכם לכל שאלה או הבהרה:",
+      "tel": "טלפון: +972-55-994-6060",
+      "email": "E mail: Brand@rotmina.com"
+    }
+  },
+  "orderHistory": {
+    "order": "מספר הזמנה",
+    "date": "תאריך",
+    "status": "סטטוס",
+    "totalCost": "סכום כולל",
+    "actions": "פעולות",
+    "noOrders": "אין לך הזמנות עדיין",
+    "paid": "שולם",
+    "pay": "שלם",
+    "sku": "SKU:",
+    "price": "מחיר:",
+    "amount": "כמות:",
+    "total": "סה\"כ:",
+    "orderDetailsNotAvailable": "פרטי ההזמנה אינם זמינים",
+    "delivered": "נמסר",
+    "canceled": "בוטל",
+    "pending": "ממתין",
+    "processing": "מעבד"
+  },
+  "account": {
+    "home": "בית",
+    "account": "חשבון"
+  },
+  "returns": {
+    "title": "החזרות והחלפות",
+    "personalDetails": "פרטים אישיים",
+    "name": "שם",
+    "phone": "טלפון",
+    "email": "מייל",
+    "shippingAddress": "כתובת לאיסוף ומשלוח",
+    "orderNumber": "מספר הזמנה באתר",
+    "orderNumberDescription": "*המספר מופיע ליד פרטי הלקוחה בחשבונית",
+    "comment": "תגובה",
+    "selectOption": "בחרי אחת מן האפשרויות",
+    "iWantToExchange": "אני רוצה להחליף",
+    "iWantToReturn": "אני רוצה להחזיר",
+    "returnOrExchange": "החזרה או החלפה"
+  },
+  "contact": {
+    "home": "בית",
+    "contact": "צור קשר",
+    "title": "אשמח לשמוע ממך",
+    "instagram": "אינסטגרם",
+    "facebook": "פייסבוק",
+    "email": "אימייל",
+    "description": "יש לך שאלות או משוב? מוזמנת לפנות אלינו. שלחו לנו את ההודעה בשדה למטה ונחזור אליכם בהקדם.",
+    "name": "שם",
+    "emailPlaceholder": "אימייל",
+    "message": "הודעה",
+    "send": "שליחה"
+  },
+  "notFound": {
+    "goToMainPage": "לעמוד הראשי"
+  },
+  "eco": {
+    "home": "בית",
+    "eco": "אקו",
+    "title": "רותמינה נולדה מתוך תשוקה לאופנה, מתוך כבוד ושאיפה לחיים של הרמוניה עם הטבע וכלל היבטיו החיים על פני כדור הארץ",
+    "animalWelfare": "רווחת בעלי החיים",
+    "animalWelfareIntro": "כחלק מתפיסה טבעונית שלמה והוליסטית, אינני עושה שימוש בפרווה, אנגורה, משי, נוצות, עורות או צמר.",
+    "animalWelfareAwareness": "בעשור האחרון חלה עלייה במודעות להשפעות ההרסניות של תעשיית האופנה על רווחת בעלי החיים,",
+    "animalWelfareExploitation": "מיליוני בעלי חיים — בהם פרות, שועלים, מינקים, ארנבות, כבשים, תנינים נחשים ועוד מנוצלים מדי שנה בתעשיות אלה,",
+    "animalWelfareReports": "על פי דיווחי ארגוני זכויות בעלי חיים: Peta Four Paws International, וworld Animal protection השימוש בבעלי חיים למטרות תעשייתיות כרוך ב:",
+    "woolShearing": "גזיזת צמר מהירה ואגרסיבית,",
+    "woolShearingDesc": "המובילה לפציעות ולכאב חמור בבעלי החיים תוך גרימת קרעים בעור וזיהומים כואבים, הפציעות נותרות פעמים רבות ללא טיפול ולעיתים אף גורמות למוות,עובדים רבים מקבלים תשלום על פי כמות מה שמוביל למהירות וחוסר זהירות קיצוני.",
+    "skinningAlive": "קילוף עורות מבעלי חיים בעודם בחיים:",
+    "skinningAliveDesc": "הליך פוגעני אלים ורשלני המתבצע לשם חיסכון בעלויות ציוד וחומרי הרדמה, קיצור זמן העבודה ושימור איכות העור, תוך מניעת פגמים וקרעים, פעולה זו גורמת לסבל חמור ופוגעת בזכויות בעלי החיים לרווחה בסיסית.",
+    "furSlaughter": "קטילה שיטתית של בעלי חיים לשם הפקת פרוותם:",
+    "furSlaughterDesc": "מיליוני בעל חיים מוחזקים בתנאים צפופים ומנוצלים לצורך הפקת מוצרי לבוש מפרוותם בדרכים קשות ואכזריות,שיטות ההמתה כוללות חניקה, התחשמלות, שבירת מפרקת או שימוש בגז, לא פעם החיות אינן מאבדות הכרה באופן מיידי מה שגורם לסבל רב וממושך.",
+    "silkBoiling": "הרתחת זחלי טווי המשי בעודם חיים לצורך הפקת חוטי משי שלמים:",
+    "silkBoilingDesc": "זחלי טווי המשי מגודלים בכמויות גדולות, לאחר יצירת פקעת המשי שלהם,הפקעות מוכנסות למים רותחים בעוד הזחלים בחיים, תהליך הנועד להקל על חילוץ חוטי המשי בשלמותם, כתוצאה מכך מליארדי זחלים מומתים מדי שנה תוך סבל לצורך הפקת מוצרי טקסטיל.",
+    "featherPlucking": "תלישת נוצות מעופות:",
+    "featherPluckingDesc": "בעיקר אווזים וברווזים לעיתים בעודם בחיים, מהווה פרקטיקה מתועדת היטב בתעשיית האופנה והטקסטיל, גורמת פציעות זיהומים כאב וסבל רב, העופות נכבלים נוצותיהם נתלשות באלימות כדי להבטיח תפוקה מרבית של נוצות רכות((downלעיתים תלישת הנוצות מתבצעת מספר פעמים באותו עוף לאורח חייו.",
+    "exoticLeather": "גידול תנינים נחשים ולטאות לצורך הפקת עורות אקזוטיים:",
+    "exoticLeatherDesc": "מיליוני זוחלים מוחזקים בבריכות סגורות וצפופות בתנאים מלאכותיים, תוך פגיעה חמורה בצרכיהם הבסיסיים, ההחזקה בתנאים אלה גורמת לסטרס קיצוני והתנהגויות חריגות, תהליך ההרג כוללו שיטות אכזריות כגון ירי בראש או בצוואר דקירה בעמוד השדרה או התחשמלות. לעיתים מתועדים בעלי החיים כשהם נותרים בהכרה חלקית בזמן הסרת עורם המיועד לייצור מוצרי יוקרה בתעשיית האופנה, תהליך הכרוך בצער בע\"ח קיצוני כאב סבל והרג מיותר.",
+    "animalWelfareGoal": "מטרתי היא ליצור מתוך מרחב הוגן ובטוח, ללא פגיעה וגרימת סבל ביצורים חיים וללא גזילת חייהם לצורכי רווח אישי, המעבר לחומרים אלטרנטיביים שאינם מהחי תורם לצמצום הפגיעה ותומך ברווחת בעלי חיים ברחבי העולם ובכך בהעלאת התדר הקולקטיבי של פלנטה ארץ.",
+    "packaging": "אריזה",
+    "packagingIntro": "רותמינה משתמשת באריזות העשויות מנייר ממוחזר, החל מאריזות השילוח, הטיקטים ,שקיות המותג ועד נייר העטיפה, הבחירות שלי נובעות מההבנה שאריזה אינה רק פונקציה של הגנה על המוצר-הן גם ביטוי לאופן שבו אני בוחרת להתנהל בעולם .",
+    "packagingExploration": "מתוך התבוננות בשאלות של קיימות צריכה ואחריות סביבתית, אני בוחרת להפחית את תביעת הרגל הפחמנית של המותג, להימנע מאריזת יתר ולבחור באריזות המשרתות את מטרתן ביעילות ובכבוד למשאבים שהסביבה מעניקה לנו,",
+    "packagingValues": "הבחירות הללו מסייעות לי להשיג את מטרותיי ותורמות לפעולה סביבתית מעשית:",
+    "energySavings": "חיסכון באנרגיה",
+    "energySavingsDesc": ": ייצור נייר ממוחזר דורש כ 30%-50% פחות אנרגיה מאשר נייר חדש,המשמעות היא חסכון משמעותי במשאבים ובהפעלת מתקנים תעשייתיים עתירי אנרגיה כמו תחנות עיבוד עץ, כבשנים ומכונות הלבנה. בתהליך המחזור,החומר הגולמי כבר עבר עיבוד קודם לכן אין צורך לפרק סיבים מההתחלה,דבר שחוסך שלבים שלמים בתהליך התעשייתי.",
+    "co2Reduction": "הפחתת פליטת CO₂",
+    "co2ReductionDesc": ": כל טון של נייר ממוחזר שמיוצר מפחית כ-2.5 טון CO₂.מחקרים מדעיים מצביעים שתעשיית ייצור נייר חדש מייצרת לא רק פליטות פחמן דו חמצני,אלא גם כמויות משמעותיות של גזי חממה נוספים כגון מתאן ותחמוצת חנקן הנפלטים בתהליכי הטמנת פסולת תעשייתית ביולוגית. תהליכי מחזור נייר מפחיתים באופן משמעותי את כמות הפסולת הזו וכך תורמים להפחתת פליטות גזי חממה כלליות מעבר להפחתה הישירה מפליטות CO₂,כמו כן יעול שרשרת האספקה של חומרי הגלם הממוחזרים מקטין את הצורך בהובלות ארוכות טווח של חומרי גלם ראשוניים ובכך מצמצם פליטת מזהמים שמקורן השינוע,אחד הגורמים המרכזיים לפליטות מזהמים עולמיות.",
+    "naturalResources": "שימור משאבים טבעיים:",
+    "naturalResourcesDesc": " שימוש בנייר ממוחזר מסייע בשימור היערות ומפחית את הצורך בכריתת עצים חדשים,יערות טבעיים מהווים מערכות אקולגיות מורכבות החיוניות לאיזון האקלים,ספיחת פחמן דו חמצני,שמירה על מגוון ביולוגי והגנה על קרקעות ומקורות מים.כריתת עצים נרחבת, במיוחד ביערות גשם ובאזורים רגישים אקולוגית,גורמת להרס בלתי הפיך של מערכות חיים שלמות ולהתדלדלות משאבים מתחדשים.כמו כן תהליך עיבוד עץ לנייר צורך כמויות גדולות של מים כימיכלים ואנרגיה בעוד שמחזור נייר מפחית באופן משמעותי את הדרישה למשאבים אלה.שימור יערות באמצעות הפחתת הביקוש לחומר גלם ראשוני תורם להגנה על איזונים טבעיים שבלעדיים הפגיעות הסביבתיות הולכות ומעמיקות.",
+    "wasteReduction": "הפחתת פסולת \"וריוז\":",
+    "wasteReductionDesc": " באמצעות אריזות ממוחזרות, אנו מאפשרים להעניק חיים לחומר קיים תוך הימנעות מייצור נוסף המוביל צריכת משאבים נוספים כגון;עצים הנכרתים למטרות תעשייה, כמויות מים עצומות בתהליכי הפקה ושימוש בדלקים מאובנים לצורכי ייצור והובלה ומכך מפחיתים את כמות הפסולת שנשלחת לאתרים ואת השפעת הפליטות המזיקות על סביבתנו.",
+    "packagingCommitment": "רותמינה תמשיך להיות קשובה לצרכי הסביבה ומחויבת לשיפור מתמיד של פעולתה כדי להימנע מפגיעה סביבתית, המותג ער להתפתחויות הטכנולוגיות ולקדמה בתחום הקיימות ויחפש תמיד דרכים חדשות להקטין את השפעתו הסביבתית ולהוות חלק מפתרון גלובלי.",
+    "packagingData": "הנתונים נתמכים ע\"י דו\"חות גופים סביבתיים מוכרים:",
+    "packagingOrganizations": "Environmental Protection Agency (EPA) המתמקדים ו -World Resources Institute (WRI) בקיימות, הפחתת פליטות והפחתת פסולת עולמית."
   }
 }
 
