--- a/locales/he.json
+++ b/locales/he.json
@@ -241,7 +241,10 @@
     "personalStylist": "עיצוב מראה אישי",
     "minutes": "דקות",
     "product": "מוצר",
-    "unknownProduct": "מוצר לא ידוע"
+    "unknownProduct": "מוצר לא ידוע",
+    "minItemPriceError": "כל פריט חייב לעלות לפחות 1",
+    "minPaymentAmountError": "סכום התשלום המינימלי הוא 1",
+    "paymentNotAvailable": "אמצעי תשלום זה עדיין לא זמין"
   },
   "terms": {
     "termsOfAgreement": "תנאי ההסכם.",
