--- a/locales/he.json
+++ b/locales/he.json
@@ -1,6 +1,7 @@
 {
   "common": {
-    "loadMore": "טען עוד"
+    "loadMore": "טען עוד",
+    "loading": "טוען..."
   },
   "products": {
     "loadMore": "טען עוד"
@@ -245,6 +246,39 @@
     "minItemPriceError": "כל פריט חייב לעלות לפחות 1",
     "minPaymentAmountError": "סכום התשלום המינימלי הוא 1",
     "paymentNotAvailable": "אמצעי תשלום זה עדיין לא זמין"
+  },
+  "productPage": {
+    "home": "בית",
+    "colour": "צבע",
+    "size": "מידה",
+    "sizeGuide": "מדריך מידות",
+    "waist": "היקף מותניים",
+    "addToCart": "הוספה לסל",
+    "description": "פרטי מוצר",
+    "shippingReturn": "משלוחים והחזרות",
+    "internationalShipping": "משלוח בינלאומי",
+    "shippingDescription": "משלוח זמין לארצות הברית, קנדה ואירופה בלבד, ומגיע בדרך כלל תוך 7-15 ימי עסקים.",
+    "shippingCosts": "עלויות משלוח:",
+    "destination": "יעד",
+    "returnsExchanges": "החזרות והחלפות",
+    "returnsDescription": "אם תרצי להחזיר פריט, אנא מלאי את טופס ההחזרה תוך 14 יום ממועד קבלת החבילה. פריטים שנעשה בהם שימוש או שנלבשו לא ניתן להחזיר או להחליף. פריטי לבוש יוחלפו רק אם הם עדיין נושאים את התווית המקורית. ברגע שהפריט מתקבל במצבו המקורי, תקבלי החזר מלא, למעט עלויות משלוח. במקרים של החזרה או החלפה, עלויות המשלוח הן באחריות הלקוחה.",
+    "europeanSurcharge": "במדינות אירופיות הבאות: אנדורה, אוסטריה, גיברלטר, אירלנד, מונקו, יוון ופורטוגל חל תוספת של 12 $ למשלוחים במשקל 3 ק\"ג בלבד. כל ההזמנות מוכנות למשלוח תוך 1-2 ימי עסקים מהסטודיו שלי בישראל.",
+    "importantNote": "חשוב: עלויות מקומיות נוספות עשויות לחול בהתאם למדיניות המכס של מדינת היעד",
+    "youMightAlsoLike": "מוזמנת להתרשם"
+  },
+  "sizeGuide": {
+    "title": "מדריך מידות",
+    "howToMeasure": "כיצד מודדים?",
+    "bust": "היקף חזה",
+    "bustInstructions": "• הניחי את סרט המדידה סביב החלק הרחב ביותר של החזה.\n• שמרי על הסרט אופקי(מקביל לרצפה) לא משוחרר או לחוץ מידי.\n• הקפידי שהכתפיים נשארות משוחררות כשאת נושמת בנינוחות.",
+    "waist": "היקף מותן",
+    "waistInstructions": "• הניחי את סרט המדידה סביב החלק הצר ביותר בבטן בדר\"כ מעל הטבור.\n• שמרי על סרט המדידה אופקי (מקביל לרצפה) לא משוחרר או לחוץ מידי.",
+    "hips": "היקף ירכיים",
+    "hipsInstructions": "• הניחי את סרט המדידה סביב החלק הרחב ביותר מתחת לאגן בגובה הישבן.\n• ודאי שסרט המדידה אופקי (מקביל לרצפה) לא משוחרר או לחוץ מידי.",
+    "size": "מידה",
+    "bustLabel": "היקף חזה",
+    "waistLabel": "היקף מותן",
+    "hipsLabel": "היקף ירכיים"
   },
   "terms": {
     "termsOfAgreement": "תנאי ההסכם.",
